--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "npm-run-all": "^4.1.5",
     "pa11y-ci": "^3.0.1",
     "parcel-bundler": "^1.12.5",
+    "posthtml-include": "^1.7.4",
+    "posthtml-svg-inline": "^1.0.0",
     "sass": "^1.58.3",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.4",
