--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-standard-scss": "^6.1.0"
+  },
+  "dependencies": {
+    "aos": "^2.3.4"
   }
 }
