--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "npm-run-all": "^4.1.5",
     "pa11y-ci": "^3.0.1",
     "parcel-bundler": "^1.12.5",
+    "parcel-plugin-purgecss": "^3.0.0",
     "posthtml-include": "^1.7.4",
     "posthtml-svg-inline": "^1.0.0",
     "sass": "^1.58.3",
